--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="img/favicon.png">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
+	<title>дневник</title>
 </head>
+
 <body>
-  
+	<section class="promo">
+		<div class="container">
+			<header class="header">
+				<a href="https://psihologkrd.ru" target="_blank" class="header__logo">
+					<img src="img/logo.png" alt="logo">
+				</a>
+				<nav class="header__nav">
+					<a class="header__link" href="#">Главная</a>
+					<a class="header__link" href="#">Информация</a>
+					<a class="header__link" href="#">Автор</a>
+					<a class="header__link" href="#">Контакты</a>
+				</nav>
+				<div class="header__contacts">
+					<a href="tel:+79628631455" class="header__phone">+7(962) 863-14-55</a>
+				</div>
+			</header>
+			<div class="promo__wrapper">
+				<h1 class="promo__header">Блокнот «Выбираю быть счастливым!»</h1>
+				<div class="promo__line"></div>
+				<h2 class="promo__subheader">Визуализируй, мечтай, планируй путь к гармонии с собой</h2>
+			</div>
+			<button data-modal="order" class="button button_main">заказать</button>
+		</div>
+	</section>
+	<section class="info">
+		<div class="container">
+			<h2 class="title">Сбалансируй свой мир</h2>
+			<div class="title__divider"></div>
+			<div class="info__wrapper"></div>
+		</div>
+	</section>
+	<script src="js/script.js"></script>
 </body>
+
 </html>
